Projeto/Compilador/tests/cases/error/T29.pas
program T29;
procedure P(x: integer);
begin
end;
begin
  P(true);
end.
